--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -73,7 +73,12 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="introduction">Introduction</h1>
 
-<p>This document can be used by technical staff who need to create Users in PaaS Portal and associate to each user a ssh key.  </p>
+<p>This document can be used by technical staff who need to create Users in PaaS Portal and associate to each user a ssh key. </p>
+<h2 id="users"><strong>Users</strong></h2>
+<hr>
+<p>The Administrator can navigate to the Users section on the portal, create more users and invite them on the Development platform using the URL link. This way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
+<p>The users of the platform can access the Organisation, view their user profile and change their password. Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
+<p><img src="../images/users.png" alt=""> </p>
 <h1 id="use-putty-ssh-client-for-ssh-key-generation">Use PuTTY ssh client for ssh key generation.</h1>
 <p>You can use any other ssh key generator client.</p>
 <div class="NOTE"><h5>Note</h5><p>If you already have installed a ssh key generator client, you can skip this step.</p>
