--- a/home/toc.html
+++ b/home/toc.html
@@ -84,9 +84,6 @@
                   <li>
                     <a href="benefits.html" name="" title="Benefits">Benefits</a>
                   </li>
-                  <li>
-                    <a href="users.html" name="" title="Users">Users</a>
-                  </li>
                 </ul>  </li>
             <li>
               <a href="faq.html" name="" title="FAQs">FAQs</a>
@@ -102,20 +99,20 @@
                 </ul>  </li>
             <li>
               <span class="expand-stub"></span>
-              <a href="techguides/index.html" name="" title="Technical Guides">Technical Guides</a>
+              <a href="techguides/index.html" name="" title="How to...">How to...</a>
                 
                 <ul class="nav level2">
                   <li>
-                    <a href="techguides/user-creation-in-paas.html" name="" title="User Creation In PaaS">User Creation In PaaS</a>
+                    <a href="techguides/user-creation-in-paas.html" name="" title="How to Create User in PaaS?">How to Create User in PaaS?</a>
                   </li>
                   <li>
-                    <a href="techguides/environment-creation-in-paas.html" name="" title="Environment and Organisation Creation">Environment and Organisation Creation</a>
+                    <a href="techguides/environment-creation-in-paas.html" name="" title="How to Create Environment and Organisation?">How to Create Environment and Organisation?</a>
                   </li>
                   <li>
-                    <a href="techguides/use-gitlab-repository.html" name="" title="Use GitLab Repository">Use GitLab Repository</a>
+                    <a href="techguides/use-gitlab-repository.html" name="" title="How to Use GitLab Repository?">How to Use GitLab Repository?</a>
                   </li>
                   <li>
-                    <a href="techguides/t24-development.html" name="" title="T24 Development">T24 Development</a>
+                    <a href="techguides/t24-development.html" name="" title="How to Develop with T24?">How to Develop with T24?</a>
                   </li>
                   <li>
                     <a href="techguides/troubleshooting.html" name="" title="Troubleshooting">Troubleshooting</a>
