--- a/home/support.html
+++ b/home/support.html
@@ -71,9 +71,20 @@
         <div class="article row grid-right">
           <div class="col-md-10">
             <article class="content wrap" id="_content" data-uid="">
-<h2 id="getting-support">Getting Support</h2>
+<h3 id="getting-support">Getting Support</h3>
 
-<p>If you have questions, you can send them to <strong><em>temenoscloud@temenos.com</em></strong>.</p>
+<hr>
+<p>If you have questions or encounter an issue while working with the platform, please address your request to <strong>temenoscloud@temenos.com</strong>.</p>
+<p>Our support team will be able to resolve your issue faster if you can include:</p>
+<ol>
+<li>The time and date of the issue as applicable</li>
+<li>A complete description of the task, or series of steps for a task, that caused the issue</li>
+<li>Any other errors or screens shots as appropriate</li>
+</ol>
+<h3 id="additional-help-and-resources">Additional help and resources</h3>
+<hr>
+<p>Temenos application support should be logged through the <a href="https://tcsp.temenos.com/SitePages/Home.aspx">Temenos Customer Support Portal</a>.</p>
+<p>Please contact your local account manager for all sales and non-support related queries.</p>
 <p><br></p>
               <hr>
               
