--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -92,7 +92,8 @@
 <p>•   This creates a new ssh key by moving the mouse in the blank area(highlighted in red), as per bellow picture.</p>
 <p><img src="images/putty-keygen-random.png" alt="generate ssh key"></p>
 <p>•   After Puttygen finished key generation, you can save your public key/private key in any location from your local machine.</p>
-<div class="NOTE"><h5>Note</h5><p>In order to have a valid ssh key that can be recognized by PaaS Infrastructure, do not use the Save pulic key button from Puttygen and just select the whole public key from the PuTTYgen screen and save it in your local machine.</p>
+<div class="NOTE"><h5>Note</h5><p>In order to have a valid ssh key that can be recognized by 
+ Infrastructure, do not use the Save pulic key button from Puttygen and just select the whole public key from the PuTTYgen screen and save it in your local machine.</p>
 </div>
 <p><img src="images/putty-keygen-publickey.png" alt="save public key"></p>
 <p>•   From PuTTYgen screen, you must also save the private key. Press the Save private key button, choose Yes on the next prompt (save the key without a passphrase to protect it) and indicate a name and location for the private key.</p>
