--- a/index.html
+++ b/index.html
@@ -68,11 +68,25 @@
 
 <p>Our portal is designed to offer best support to all Fintechs partners, as we understand the need of a simplified and quick development solution to have a product implemented with Temenos system.
 You can find here technical and functional support through step-by-step guides, which you can also download. </p>
-<p>Please check following sections:</p>
+<h3 id="benefits">Benefits</h3>
 <ul>
-<li><p><a href="home/overview.html">Services</a></p>
+<li><p>Self-service environment provisioning, with centralised control to completely self-service</p>
 </li>
-<li><p><a href="home/techguides/index.html">Technical Guides</a></p>
+<li><p>Reduction in projects duration; by eliminating the time to create or wait for an environment</p>
+</li>
+<li><p>Operational expense; subscription service </p>
+</li>
+<li><p>Start development and testing in minutes, not weeks</p>
+</li>
+<li><p>Simple to reproduce identical environments</p>
+</li>
+</ul>
+<h3 id="services">Services</h3>
+<ul>
+<li><p><strong>Temenos Cloud Platform</strong> is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
+</li>
+<li><p><strong>DevX</strong> is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. </p>
+<p>  You can read more details <a href="home/overview.html"><strong>here</strong></a>.</p>
 </li>
 </ul>
 <p><br></p>
