--- a/home/architecture.html
+++ b/home/architecture.html
@@ -73,22 +73,22 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="architecture-overview">Architecture Overview</h1>
 
-<h3 id="where-does-temenos-paas-fit-into-the-enterprise-it-landscape"><strong>Where does Temenos PaaS fit into the enterprise IT landscape?</strong></h3>
+<h3 id="where-does-temenos-devx-fit-into-the-enterprise-it-landscape"><strong>Where does Temenos DevX fit into the enterprise IT landscape?</strong></h3>
 <hr>
-<p>The Temenos PaaS platform promotes the concept of simplified and standardised change promotion through the IT landscape.</p>
+<p>The Temenos DevX platform promotes the concept of simplified and standardised change promotion through the IT landscape.</p>
 <p><img src="images/architecture-arrows.png" alt=""></p>
 <p>Typical organisations have a number of non-production (i.e. development/test) environments, where changes are implemented and checked prior to deployment to production systems. The Devops movement seeks to improve this QA process through means of automation, which both allows an increase in speed in change promotion, and a reduction in the risk of manual errors when promoting changes.</p>
-<p>The Temenos PaaS platform includes a simple and repeatable method of collating changes (both configuration and customisation) which subsequently is simple to promote from environment to environment.</p>
-<p>In addition, the core function of the Temenos PaaS platform is to simplify the environment provisioning process, which means if extra stages in the change flow are required (e.g. for additional testing phases), it becomes far simpler to spin up temporary environments for these purposes.</p>
-<p>It should be noted that the Temenos PaaS platform only supplies non-production environments (also known as &#39;sandboxes&#39;), which means organisations will still require at least one non-production environment on representative hardware in order to sanity check changes prior to production release (see example below).</p>
+<p>The Temenos DevX platform includes a simple and repeatable method of collating changes (both configuration and customisation) which subsequently is simple to promote from environment to environment.</p>
+<p>In addition, the core function of the Temenos DevX platform is to simplify the environment provisioning process, which means if extra stages in the change flow are required (e.g. for additional testing phases), it becomes far simpler to spin up temporary environments for these purposes.</p>
+<p>It should be noted that the Temenos DevX platform only supplies non-production environments (also known as &#39;sandboxes&#39;), which means organisations will still require at least one non-production environment on representative hardware in order to sanity check changes prior to production release (see example below).</p>
 <p><img src="images/architecture-paas-deploy.png" alt=""></p>
 <p>Delegating platform and infrastructure responsibilities to a third party allows organisations to concentrate on what is important to them - applications and data.</p>
 <p><img src="images/architecture-responsabilities.png" alt=""></p>
-<p>The Temenos PaaS platform may be used for simple environment provisioning, or may be augmented by additional tools (such as Continuous Integration tooling) to provide a streamlined and automated development experience. The change promotion mechansim within the PaaS platform is simple to plug into standard CI tooling to push code/config/data from environment to environment.  An example development flow is shown below:</p>
+<p>The Temenos DevX platform may be used for simple environment provisioning, or may be augmented by additional tools (such as Continuous Integration tooling) to provide a streamlined and automated development experience. The change promotion mechansim within the DevX platform is simple to plug into standard CI tooling to push code/config/data from environment to environment.  An example development flow is shown below:</p>
 <p><img src="images/architecture-process.png" alt=""></p>
-<h3 id="what-are-the-components-of-temenos-paas"><strong>What are the components of Temenos PaaS?</strong></h3>
+<h3 id="what-are-the-components-of-temenos-devx"><strong>What are the components of Temenos DevX?</strong></h3>
 <hr>
-<p>Sandbox environments are managed by the PaaS Platform Portal, and are comprised of distinct components as described below:</p>
+<p>Sandbox environments are managed by the DevX Platform Portal, and are comprised of distinct components as described below:</p>
 <p><img src="images/architecture-customer-facing-systems.png" alt=""></p>
 <table>
 <thead>
@@ -100,11 +100,11 @@
 <tbody>
 <tr>
 <td style="text-align:left">Portal</td>
-<td style="text-align:left">The Portal is the front-end component of the PaaS Platform which allows users to perform management functions across sandbox environments.  These functions include user management and sandbox provisioning/scaling.</td>
+<td style="text-align:left">The Portal is the front-end component of the DevX Platform which allows users to perform management functions across sandbox environments.  These functions include user management and sandbox provisioning/scaling.</td>
 </tr>
 <tr>
 <td style="text-align:left">Configuration Repository</td>
-<td style="text-align:left">The Configuration Repository is the &#39;change hub&#39; for the PaaS Platform.  It supports configuration and customisation (per sandbox), including T24 updates, custom config/code packages, database imports and third party plug-ins/add-ons.</td>
+<td style="text-align:left">The Configuration Repository is the &#39;change hub&#39; for the DevX Platform.  It supports configuration and customisation (per sandbox), including T24 updates, custom config/code packages, database imports and third party plug-ins/add-ons.</td>
 </tr>
 <tr>
 <td style="text-align:left">T24 Instance</td>
@@ -116,9 +116,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="what-can-you-do-with-temenos-paas"><strong>What can you do with Temenos PaaS?</strong></h3>
+<h3 id="what-can-you-do-with-temenos-devx"><strong>What can you do with Temenos DevX?</strong></h3>
 <hr>
-<p>Below is a list of functions which can be performed using Temenos PaaS.</p>
+<p>Below is a list of functions which can be performed using Temenos DevX.</p>
 <table>
 <thead>
 <tr>
@@ -165,9 +165,9 @@
 </tr>
 </tbody>
 </table>
-<h3 id="what-tools-do-i-need-to-use-temenos-paas"><strong>What tools do I need to use Temenos PaaS?</strong></h3>
+<h3 id="what-tools-do-i-need-to-use-temenos-devx"><strong>What tools do I need to use Temenos DevX?</strong></h3>
 <hr>
-<p>Below is a list of tools which may be used to exploit Temenos PaaS functionality.</p>
+<p>Below is a list of tools which may be used to exploit Temenos DevX functionality.</p>
 <table>
 <thead>
 <tr>
@@ -178,7 +178,7 @@
 <tbody>
 <tr>
 <td style="text-align:left">Git</td>
-<td style="text-align:left">Git is a version control system, used by the PaaS platform to manage the Configuration Repository</td>
+<td style="text-align:left">Git is a version control system, used by the DevX platform to manage the Configuration Repository</td>
 </tr>
 <tr>
 <td style="text-align:left">SFTP Client</td>
@@ -186,11 +186,11 @@
 </tr>
 <tr>
 <td style="text-align:left">Continuous Integration Tool (Optional)</td>
-<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos PaaS Platform, but these are useful in reducing manual tasks when managing environments.</td>
+<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos DevX Platform, but these are useful in reducing manual tasks when managing environments.</td>
 </tr>
 <tr>
 <td style="text-align:left">Design Studio (Optional)</td>
-<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the PaaS Platform, but change outputs from this tool are supported within the Configuration Repository.</td>
+<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the DevX Platform, but change outputs from this tool are supported within the Configuration Repository.</td>
 </tr>
 </tbody>
 </table>
