--- a/home/overview.html
+++ b/home/overview.html
@@ -73,29 +73,38 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="temenos-cloud-development-platform"><strong>Temenos Cloud Development Platform</strong></h1>
 
-<h2 id="devx"><strong>DevX</strong></h2>
-<hr>
+<h3 id="what-is-temenos-cloud-platform">What is Temenos Cloud Platform?</h3>
+<p>Temenos Cloud Platform is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
+<h2 id="devx">DevX</h2>
 <h3 id="what-is-temenos-devx-platform">What is Temenos DevX Platform?</h3>
 <p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand<a href="what-is-devx.html"><strong>... see more</strong></a></p>
-<h3 id="what-is-temenos-paas">What is Temenos PaaS?</h3>
-<p>Temenos PaaS is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
 <h2 id="features"><strong>Features</strong></h2>
 <hr>
 <h3 id="what-are-the-features-of-devx">What are the features of DevX?</h3>
+<p><strong>Self-service environment provisioning</strong></p>
 <ul>
-<li>Request and Provision identical environments within minutes </li>
-<li>Chose the application you wish from a predefined list of Temenos Suites</li>
-<li>Deployment of change is fully automated; All types of change, configuration, updates and data are managed through a software configuration management repository</li>
-<li>Stay in  control with metered usage and full reporting</li>
-<li>You decide and manage your data loading</li>
-<li>You can export your data at any point</li>
-<li>You decide and manage scalability according your demands (Scale up / down)</li>
-<li>Online access to live log data</li>
-<li>Full access and control of your CoB and all job services.</li>
-<li>You are in control of backup/rebuild of databases, at any point in time.</li>
-<li>Decide and select updates for your OS.</li>
+<li>An authenticated user, e.g. a developer or tester, has the ability to request an environment from the <a href="temenos-cloud-templates.html">catalogue of templates</a>; this template will be materialised into compute, storage, and networks on the Temenos Cloud. See <a href="architecture.html">architecture</a>. The platform administrator, e.g. the project manager, is in  control of number of the users and maximum number of running environments, thus having total control of the platform and its usage.</li>
 </ul>
-<h2 id="temenos-cloud-management-of-users-organisations-and-environments">Temenos Cloud Management of Users, Organisations and Environments</h2>
+<p><strong>Secure configuration and environment management</strong></p>
+<ul>
+<li>A developer, is able to configure a personal SSH Key on their user profile and use this key to securely push changes over SSH.  Deployment of change into the environment is fully automated for configuration, updates, plugins, add-ons and data.  These changes can be stored in a software configuration management repository and deployed to the environment via a Continuous Integration / Continuous Deployment process.</li>
+</ul>
+<p><strong>Controlling the environment</strong></p>
+<ul>
+<li><p>A user is able to scale up, scale down, start, stop, delete, and export data from an environment.  Furthermore, a user is able to push a database into the configuration repository and rebuild the environment, thereby refreshing the database back to that point in time and re-apply transactions and configuration as required. </p>
+</li>
+<li><p>As an example, a developer or a tester can load a database and collaborate to validate changes and test cases in a shared environment. Should these users need to delete or migrate an environment, they can export the data, create a fresh environment with the latest release, upload the data and continue working all managed through the portal.  When development activity requires additional resources, the users can easily scale up the environments and equally reduce capacity or stop it entirely.</p>
+</li>
+</ul>
+<p><strong>Monitoring the environment</strong></p>
+<ul>
+<li>A user can export the application log data, monitor the status of the environments (started, starting, stopped, stopping, rebuilding), and see the results of any application deployments.</li>
+</ul>
+<p><strong>Controlling the application</strong></p>
+<ul>
+<li>The Temenos core banking template [insert link] exposes endpoints for the user interface and TAFJEE management screens that allows a user to control COB job services.</li>
+</ul>
+<h2 id="managed-resources">Managed Resources</h2>
 <hr>
 <ul>
 <li><strong>Users</strong></li>
@@ -113,7 +122,7 @@
 <p>The Temenos Development Platform can provision environments in a variety of different configurations through the concept of &#39;Templates&#39;. Please check <a href="temenos-cloud-templates.html"><strong>here</strong></a> for more details. </p>
 <h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
 <hr>
-<p>The most important consideration with respect to data on the Temenos PaaS platform is that it for <strong>non-production use only</strong>.  For clarification, no &#39;personally identifiable information&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data may be stored on any sandbox environments.</p>
+<p>The most important consideration with respect to data on the Temenos DevX platform is that it for <strong>non-production use only</strong>.  For clarification, no &#39;personally identifiable information&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data may be stored on any sandbox environments.</p>
 <p>Other considerations include:</p>
 <p>•   Data is stored in UK datacentres</p>
 <p>•   Data is encrypted in transit</p>
