--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="welcome-to-the-temenos-cloud-platform-documentation-portal">Welcome to the <strong>Temenos Cloud Platform</strong> documentation portal</h1>
 
-<ul>
-<li><strong>Temenos Cloud Platform</strong> is a suite of products offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</li>
-</ul>
+<p><strong>Temenos Cloud Platform</strong> is a suite of products offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
 <h3 id="benefits">Benefits</h3>
 <ul>
 <li><p>Simple to reproduce identical environments</p>
