--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 <p><strong>Temenos Cloud Platform</strong> is a suite of products offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
 <h3 id="benefits">Benefits</h3>
 <ul>
-<li><p>Simple to reproduce identical environments</p>
-</li>
 <li><p>Start development and testing in minutes, not weeks</p>
 </li>
-<li><p>A subscription service that can reduce operational expense</p>
-</li>
 <li><p>Immediate environment provisioning can acceleration all your projects</p>
+</li>
+<li><p>Simple to reproduce identical environments from templates</p>
+</li>
+<li><p>A subscription service that means you don&#39;t need to buy and manage expensive hardware</p>
 </li>
 <li><p>Self-service environment provisioning that is able to provide your teams with autonomy or centralised control</p>
 </li>
