--- a/home/overview.html
+++ b/home/overview.html
@@ -73,7 +73,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h3 id="what-is-temenos-devx-platform">What is Temenos DevX Platform?</h3>
 
-<p>“DevX” is a cloud based platform for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand.</p>
+<p>“DevX” is a cloud based service for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand.  This software service provides clients with access to a portal interface through which they can provision cloud environments using software defined templates. Once provisioned client can interact with these environments through portal tools, design studio integration and the standard Temenos product web and APIs.</p>
 <h2 id="features"><strong>Features</strong></h2>
 <hr>
 <h3 id="what-are-the-features-of-devx">What are the features of DevX?</h3>
