--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
 </ul>
 <h3 id="services">Services</h3>
 <ul>
-<li><p><strong>DevX</strong> is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. </p>
-<p>  You can read more details <a href="home/overview.html"><strong>here</strong></a>.</p>
-</li>
+<li><strong>DevX</strong> is a cloud based service for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. Click <a href="home/overview.html"><strong>here</strong></a> to find out more.</li>
 </ul>
 <p><br></p>
               <hr>
