--- a/toc.html
+++ b/toc.html
@@ -77,7 +77,7 @@
           
           <ul class="nav level1">
             <li>
-              <a href="home/overview.html" name="home/toc.html" title="Home">Home</a>
+              <a>Home</a>
             </li>
           </ul>      </div>
     </div>
