--- a/home/overview.html
+++ b/home/overview.html
@@ -114,7 +114,7 @@
 <p>Environments can be provisioned using a variety of pre-defined application, processing, storage, network, and operating system configurations. Please check <a href="temenos-cloud-templates.html"><strong>here</strong></a> for more details. </p>
 <h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
 <hr>
-<p>The Temenos DevX  is for <strong>non-production use only</strong>.  No &#39;personal data&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data should be stored on any Environment.</p>
+<p>The Temenos DevX  is for <strong>non-production use only</strong>, unless otherwise stated.  No &#39;personal data&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data should be stored on any Environment.</p>
 <p>•   Data is stored in UK datacentres</p>
 <p>•   Data is encrypted in transit</p>
 <p>•   Access to management facilities requires username/password and/or SSH certificates</p>
