--- a/home/architecture.html
+++ b/home/architecture.html
@@ -186,11 +186,11 @@
 </tr>
 <tr>
 <td style="text-align:left">Continuous Integration Tool (Optional)</td>
-<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos DevX Platform, but these are useful in reducing manual tasks when managing environments.</td>
+<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos DevX, but these are useful in reducing manual tasks when managing environments.</td>
 </tr>
 <tr>
 <td style="text-align:left">Design Studio (Optional)</td>
-<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the DevX Platform, but change outputs from this tool are supported within the Configuration Repository.</td>
+<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the DevX, but change outputs from this tool are supported within the Configuration Repository.</td>
 </tr>
 </tbody>
 </table>
