--- a/home/techguides/index.html
+++ b/home/techguides/index.html
@@ -73,7 +73,7 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="technical-guides">Technical Guides</h1>
 
-<p>Here you have access to online documentation to help you develop and test the integration of your products through the cloud sandbox environment provided by Temenos MarketPlace.</p>
+<p>Here you have access to online documentation to help you develop and test the integration of your products through the Temenos DevX environment provided by Temenos Cloud Platform Xelerate.</p>
 <p><br></p>
               <hr>
               
