--- a/home/users.html
+++ b/home/users.html
@@ -74,8 +74,8 @@
 <h2 id="users"><strong>Users</strong></h2>
 
 <hr>
-<p>The Administrator can navigate to the Users section on the portal, create more users and invite them on the Development platform using the URL link. This way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
-<p>The users of the platform can access the Organisation, view their user profile and change their password. Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
+<p>The Administrator can navigate to the Users section on the portal, create more users and invite them to access the organisation using the URL link. This way the administrator is in control of who receives the URL link and which users can access the organisation.</p>
+<p>The users can access his Organisation only, view their user profile and change their password. Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
 <p><img src="images/users.png" alt=""></p>
 <p><br></p>
               <hr>
