--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -87,7 +87,7 @@
 <li>Temenos Sandbox(cloud)</li>
 <li>Tortoise Git(locally)  - download from <a href="https://tortoisegit.org/download/" title="Tortoise">here</a></li>
 </ul>
-<p>A development package (containing Design Studio, T24 libraries and TAFJ) is provided by Temenos MarketPlace and it is pre-configured in order to be able to introspect T24 application hosted in MarketPlace Could Infrastructure.
+<p>A development package (containing Design Studio, T24 libraries and TAFJ) is provided by Temenos  and it is pre-configured in order to be able to introspect T24 application hosted in Temenos Could Development Dev-X.
 This package is adapted according to the T24 version of your sandbox and it is provided as a .zip file. After extracting it in your local machine to any location, the bellow folders and files should exist:
 <img src="images/dev-package.png" alt="dev package"><br>The development package is pre-configured to be extracted in <em>C:\TemenosDev</em> path. If the package is extracted in another path(Your_DEV_Path), make sure you make the bellow changes to the development package:</p>
 <ul>
@@ -122,7 +122,7 @@ This package is adapted according to the T24 version of your sandbox and it is p
 </tr>
 </tbody>
 </table>
-<div class="NOTE"><h5>Note</h5><p>In order to get the database IP of your Sandbox, contact MarketPlace team at <br>marketplace-support@temenos.com.</p>
+<div class="NOTE"><h5>Note</h5><p>In order to get the database IP of your Sandbox, contact TemenosCloud team at <br>TemenosCloud@temenos.com.</p>
 </div>
 <h1 id="create-new-project-in-design-studio">Create New Project in Design Studio</h1>
 <p>In order to accomplish the development actions presented at the beginning of the guide, you need to create a new project in Design Studio.</p>
