--- a/home/toc.html
+++ b/home/toc.html
@@ -115,6 +115,9 @@
             <li>
               <a href="support.html" name="" title="Getting Support">Getting Support</a>
             </li>
+            <li>
+              <a href="Legal.html" name="" title="Legal and Other Items">Legal and Other Items</a>
+            </li>
           </ul>      </div>
     </div>
   </div>
