--- a/home/toc.html
+++ b/home/toc.html
@@ -77,7 +77,7 @@
           
           <ul class="nav level1">
             <li>
-              <a href="overview.html" name="" title="What is Temenos Cloud DevX?">What is Temenos Cloud DevX?</a>
+              <a href="overview.html" name="" title="What is Temenos Cloud Development PLatform?">What is Temenos Cloud Development PLatform?</a>
             </li>
             <li>
               <span class="expand-stub"></span>
